--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,17 @@
 
     <groupId>wangzhongqiu</groupId>
     <artifactId>zookeeper-client</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>zookeeper-client-curator</module>
+    </modules>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-framework</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+    </dependencies>
 </project>
