--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>curator-framework</artifactId>
             <version>2.8.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-recipes</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+
     </dependencies>
 </project>
