--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <wangzhongqiu_javautils_version>1.0</wangzhongqiu_javautils_version>
         <curator_framework_version>2.8.0</curator_framework_version>
         <curator_recipes_version>2.8.0</curator_recipes_version>
+        <curator_test_version>2.8.0</curator_test_version>
     </properties>
 
     <dependencyManagement>
@@ -35,6 +36,11 @@
                 <groupId>org.apache.curator</groupId>
                 <artifactId>curator-recipes</artifactId>
                 <version>${curator_recipes_version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-test</artifactId>
+                <version>${curator_test_version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
