--- a/zookeeper-client-curator/pom.xml
+++ b/zookeeper-client-curator/pom.xml
@@ -22,6 +22,10 @@
             <artifactId>curator-recipes</artifactId>
             <version>${curator_recipes_version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.curator</groupId>
+            <artifactId>curator-test</artifactId>
+            <version>${curator_test_version}</version>
+        </dependency>
     </dependencies>
 </project>
